fix: add overflow property

--- a/singolo1.css
+++ b/singolo1.css
@@ -188,4 +188,5 @@ body {
 	font-size: 0.7em;
 	line-height: 22px;
 	color: #767e9e;
+	overflow: hidden;
 }
